# ga4gh_service_info_sidecar_gsoc_2026

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
configs/: service_info.yaml
docs/: api.md  architecture.md  index.md
sidecar/: __init__.py  main.py
sidecar/api/routes/: proxy.py  service_info.py
sidecar/config/: merge.py  settings.py
sidecar/core/: provider.py  upstream.py
sidecar/models/: registry.py  service_info.py
tests/: test_integration.py  test_merge.py  test_proxy.py  test_service_info.py  test_smoke.py  test_upstream.py
