[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga4gh-serviceinfo-sidecar"
version = "0.1.0"
description = "GA4GH ServiceInfo Sidecar — GSoC 2026"
requires-python = ">=3.12"

dependencies = [
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
