[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga4gh-serviceinfo-sidecar"
version = "0.1.0"
description = "GA4GH ServiceInfo Sidecar — GSoC 2026"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-httpx>=0.35",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "pre-commit>=3.7",
  "types-PyYAML",
  "python-dotenv>=1.0",
  "watchfiles>=1.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = [
  "pydantic.mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
